# resetping

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  daily-install-snapshot.yml  release.yml
docs/: TELEMETRY_POLICY.md
ops/metrics/: install_snapshots.json
scripts/: mock-status-server.mjs  snapshot-release-downloads.mjs
src/: main.ts  styles.css
src-tauri/: .env.sample  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/utils/: telemetry.ts  time.test.ts  time.ts  updater.test.ts  updater.ts
