[package]
name = "resetping"
version = "0.1.0"
description = "ResetPing - Codex reset notifier"
authors = ["niels.van.Galen.last"]
edition = "2021"

[lib]
name = "resetping_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["http-native-tls"]
http-native-tls = []
http-rustls = []

[dependencies]
dotenvy = "0.15.7"
rand = "0.10.0"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "native-tls", "rustls"] }
sentry = "0.47.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-notification = "2.3.3"
tauri-plugin-opener = "2.5.3"
tauri-plugin-updater = "2.9.0"
tokio = { version = "1.50.0", features = ["time"] }
uuid = { version = "1.18.1", features = ["v4"] }

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }
